updated loader, removed img from news cards, fixed search out of view

--- a/src/app/components/loader/loader.component.sass
+++ b/src/app/components/loader/loader.component.sass
@@ -2,28 +2,6 @@
 
 .loader-container
   position: fixed
-  top: 20vh
-  left: 26vw
+  top: 48px
   z-index: 10
-
-  .loader-background
-    padding: 30px 10px
-    display: flex
-    align-items: center
-    justify-content: center
-    width: 50vw
-    height: 100px
-    border-radius: 2px
-
-  .loading-text
-    position: relative
-    top: 0px
-    right: 74px
-    color: styles.$secondary-color
-
-.loading-background
-    background-color: #00000030
-    top: 0
-    position: fixed
-    height: 150vh
-    width: 150vw
+  width: 100%
