--- a/src/app/components/news-card/news-card.component.sass
+++ b/src/app/components/news-card/news-card.component.sass
@@ -29,14 +29,6 @@
         font-size: 1.5em
         line-height: 1.2em
 
-    .news-img
-        width: 40%
-        @media screen and (max-width: styles.$screen-lg)
-            width: 80%
-
-    .news-img:hover
-        cursor: pointer
-
     p
         font-size: 0.75em
         line-height: 1.3em
@@ -48,4 +40,3 @@
 @media screen and (max-width: styles.$screen-lg)
     .card
         font-size: 20px
-        flex-direction: column
